--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="./css/styles.css">
+	<link rel="stylesheet" href="https://smnik.github.io/coursera-web/mod2_solution/css/styles.css">
 	<title>"Solution for Module 2"</title>
 </head>
 <body>
