--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="coursera-web/mod2_solution/css/style.css">
+	<link rel="stylesheet" href="https://github.com/SMNIK/coursera-web/blob/master/mod2_solution/css/style.css">
 	<title>"Solution for Module 2"</title>
 </head>
 <body>
