--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -15,8 +15,8 @@
 
   <title>Boostrap Starter Page</title>
   <!-- Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Alfa Slab One' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100;1,300&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
